--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Frozen Items Mart </a>
+            <a class="navbar-brand" href="/FrozenItemsMartBootstrap">Frozen Items Mart </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link " href="/index.html">Home</a>
+                        <a class="nav-link " href="/FrozenItemsMartBootstrap/index.html">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link active" href="/FrozenItemsMartBootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
@@ -38,20 +38,20 @@
                             Menu
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/HomeMade.html">Home Made Items</a></li>
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/HomeMade.html">Home Made Items</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="FrozenVeggies.html">Frozen Veggies</a></li>
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/FrozenVeggies.html">Frozen Veggies</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/SeaFood.Html">Sea Food <span
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/SeaFood.Html">Sea Food <span
                                         class="badge bg-secondary">Restocked</span></h6></a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/VeganFood.html">Vegan Food <span class="badge bg-secondary">Limited
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/VeganFood.html">Vegan Food <span class="badge bg-secondary">Limited
                                         Options</span> </a></li>
 
 
