--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link active" aria-current="page" href="/index.html" >Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/About.html" >About</a>
+                        <a class="nav-link" href="/FrozenItemsMartBootstrap/About.html" >About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -37,21 +37,21 @@
                             Menu
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/HomeMade.html" >Home Made Items</a></li>
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/HomeMade.html" >Home Made Items</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/FrozenVeggies.html" >Frozen Veggies</a></li>
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/FrozenVeggies.html" >Frozen Veggies</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/SeaFood.Html" >Sea Food <span
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/SeaFood.Html" >Sea Food <span
                                         class="badge bg-secondary">Restocked</span></h6></a>
                                         
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/VeganFood.html" >Vegan Food <span class="badge bg-secondary">Limited
+                            <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/VeganFood.html" >Vegan Food <span class="badge bg-secondary">Limited
                                         Options</span> 
                                     </a></li>
 
