--- a/FrozenVeggies.html
+++ b/FrozenVeggies.html
@@ -15,7 +15,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Frozen Items Mart </a>
+        <a class="navbar-brand" href="/FrozenItemsMartBootstrap/index.html">Frozen Items Mart </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link " href="/index.html">Home</a>
+                    <a class="nav-link " href="/FrozenItemsMartBootstrap/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/About.html">About</a>
+                    <a class="nav-link" href="/FrozenItemsMartBootstrap/About.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -35,20 +35,20 @@
                         Menu
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" aria-current="page" href="/HomeMade.html">Home Made Items</a></li>
+                        <li><a class="dropdown-item" aria-current="page" href="/FrozenItemsMartBootstrap/HomeMade.html">Home Made Items</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="/FrozenVeggies.html">Frozen Veggies</a></li>
+                        <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/FrozenVeggies.html">Frozen Veggies</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="/SeaFood.Html">Sea Food <span class="badge bg-secondary">Restocked</span></h6></a></li>
-                        <a class="nav-link "  href="/SeaFood.Html">Sea Food</a>
+                        <a class="nav-link "  href="/FrozenItemsMartBootstrap/SeaFood.Html">Sea Food</a>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="/VeganFood.html">Vegan Food <span class="badge bg-secondary">Limited
+                        <li><a class="dropdown-item" href="/FrozenItemsMartBootstrap/VeganFood.html">Vegan Food <span class="badge bg-secondary">Limited
                                     Options</span> </a></li>
 
 
@@ -180,7 +180,7 @@
    </div>
  </div>
 <footer class="container">
-    <p class="float-end"><a href="/About.html">Back to top</a></p>
+    <p class="float-end"><a href="/FrozenItemsMartBootstrap/About.html">Back to top</a></p>
     <p>© 2021–2022 Frozen Items Mart, Inc.</p>
     <h4>Contact Us:</h4>
         <i class="bi bi-twitter"></i>
